--- a/AssetShareREST/appsettings.json
+++ b/AssetShareREST/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDb": {
+    "ConnectionString": "mongodb+srv://madslarsen:DIT_PASSWORD_HER@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "AssetShareDb"
+  }
 }
