--- a/AssetShareREST/appsettings.json
+++ b/AssetShareREST/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDb": {
-    "ConnectionString": "mongodb+srv://madslarsen:DIT_PASSWORD_HER@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://tester:test123@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "AssetShareDb"
   }
 }
