Enable Swagger and dev exception page in all environments
Moved Swagger and Developer Exception Page middleware outside of the development environment check to enable them in all environments. Added ARM deployment profile for Azure App Service and corrected MongoDB database name casing in appsettings.json.

--- a/AssetShareREST/appsettings.json
+++ b/AssetShareREST/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "MongoDb": {
     "ConnectionString": "mongodb+srv://madslarsen:mads123@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
-    "DatabaseName": "AssetShareDb"
+    "DatabaseName": "AssetShareDB"
   }
 }
