--- a/AssetShareREST/AssetShareREST.csproj
+++ b/AssetShareREST/AssetShareREST.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
