Update MongoDB connection string in appsettings.json
Replaces the MongoDB connection string with a new password for improved security or credential update.

--- a/AssetShareREST/appsettings.json
+++ b/AssetShareREST/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDb": {
-    "ConnectionString": "mongodb+srv://madslarsen:mads123@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://madslarsen:k1WOtsc9shLX5NQL@cluster0.cvjiyiw.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "AssetShareDB"
   }
 }
