--- a/AssetShareREST/AssetShareREST.csproj
+++ b/AssetShareREST/AssetShareREST.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
