--- a/AssetShareREST/AssetShareREST.csproj
+++ b/AssetShareREST/AssetShareREST.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <Reference Include="AssetShareLib">
-      <HintPath>..\..\..\..\source\repos\AssetShareLib\AssetShareLib\bin\Debug\net8.0\AssetShareLib.dll</HintPath>
+      <HintPath>..\..\AssetShare_Backend\AssetShareLib\bin\Debug\net8.0\AssetShareLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
